Tweak Android and JVM config